\name{NEWS}
\title{brms News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 1.7.0++}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Fit spatial autoregressive (SAR) models
      via function \code{cor_sar}. Currently works
      for families \code{gaussian} and \code{student}.
      \item Implement skew normal models
      via family \code{skew_normal}.
      \item Improve parallel execution flexibility
      via the \code{future} package.
    }
  }
}

\section{CHANGES IN VERSION 1.7.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Fit latent Gaussian processes of one
      or more covariates via function \code{gp} 
      specified in the model formula (#221).
      \item Rework methods \code{fixef}, \code{ranef},
      \code{coef}, and \code{VarCorr} to be more flexible 
      and consistent with other post-processing methods (#200).
      \item Generalize method \code{hypothesis} to be
      applicable on all objects coercible to a 
      \code{data.frame} (#198).
      \item Visualize predictions via spaghetti 
      plots using argument \code{spaghetti} in
      \code{marginal_effects} and \code{marginal_smooths}.
      \item Introduce method \code{add_ic} to
      store and reuse information criteria in 
      fitted model objects (#220).
      \item Allow for negative weights in 
      multi-membership grouping structures.
      \item Introduce an \code{as.array} method
      for \code{brmsfit} objects.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Show output of \R code in HTML vignettes thanks
      to Ben Goodrich (#158).
      \item Resolve citations in PDF vignettes thanks
      to Thomas Kluth (#223).
      \item Improve sampling efficiency for
      \code{exgaussian} models thanks to
      Alex Forrence (#222).
      \item Also transform data points when using argument 
      \code{transform} in \code{marginal_effects}
      thanks to Markus Gesmann.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{