@@ -18,6 +18,10 @@ fitted_cauchy <- function(draws) {
   fitted_default(draws)
 }
 
+fitted_skew_normal <- function(draws) {
+  fitted_default(draws)
+}
+
 fitted_lognormal <- function(draws) {
   draws$sigma <- get_sigma(
     draws$sigma, data = draws$data, dim = dim_mu(draws)
@@ -29,17 +33,6 @@ fitted_lognormal <- function(draws) {
     draws$mu <- fitted_trunc(draws)
   }
   draws$mu
-}
-
-fitted_skew_normal <- function(draws) {
-  draws$sigma <- get_sigma(
-    draws$sigma, data = draws$data, dim = dim_mu(draws)
-  )
-  draws$alpha <- get_auxpar(draws$alpha)
-  draws$mu <- ilink(draws$mu, draws$f$link)
-  with(draws, 
-    mu + sigma * alpha / sqrt(1 + alpha^2) * sqrt(2 / pi)
-  )
 }
 
 fitted_binomial <- function(draws) {
